# GhidraPointerMiner

./: .clang-format  .gitignore  CMakeLists.txt  ExportPCodeToJsonScript.java  GenerateDotGraphScript.java  PointerMiner.java  PointerMinerScript.java  README.md  format.sh  result.txt
example/: Makefile  dump.json  dump.pcode  example3  example3.c  example3.json  main.cpp  main.dot
example/example1/: dump.json  main.dot
example/example2/: dump.json  entry.dot  main  main.cpp  swap.dot
ghidra_scripts/: ExportLowPCodeScript.java  ExportPCodeToJsonScript.java  GenerateDotGraphScript.java
ghidra_scripts/dumper/: BasicBlockDumper.java  FunctionDumper.java  InstructionDumper.java  ProgramDumper.java  VarnodeWrapper.java
ghidra_scripts/utils/: BasicBlockContext.java  BasicBlockDumper.java  Controlflow.java  FunctionDumper.java  IDGenerator.java  InstructionDumper.java  PcodeBlockBasicWrapper.java  PcodeOpNames.java  ProgramDumper.java  VarnodeWrapper.java
src/: main.cpp
src/IR/: BasicBlock.cpp  BasicBlock.hpp  Function.cpp  Function.hpp  Instruction.cpp  Instruction.hpp  PcodeInstructions.hpp  Program.cpp  Program.hpp  TypeDeducer.cpp  TypeDeducer.hpp  Value.cpp  Value.hpp  _typ_dcl.hpp
utils/: BasicBlockContext.java  BasicBlockDump.java  BasicBlockDumper.java  CFG.java  ComparablePcodeBasicBlock.java  ComparablePcodeBlock.java  ControlFlowGraph.java  Controlflow.java  FunctionDump.java  FunctionDumper.java  InstructionDump.java  InstructionDumper.java  PcodeBasicBlockWrapper.java  PcodeBlockBasicWrapper.java  ProgramDump.java  VarnodeWrapper.java
(+6 files in other folders)
